Fixed bill details verification stuck